--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
 
 #pokeInfo{
     border-radius: 1rem;
-    background-color: rgb(88, 96, 167);
+    /* background-color: rgb(88, 96, 167); */
     color: white;
 }
 
